--- a/HospitalSanVicente/HospitalSanVicente.csproj
+++ b/HospitalSanVicente/HospitalSanVicente.csproj
@@ -8,7 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.10" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.10" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="SendGrid" Version="9.29.3" />
     </ItemGroup>
 
 </Project>
